added some proteins for snd case study

--- a/arbeit.tex
+++ b/arbeit.tex
@@ -286,7 +286,19 @@ Da \textit{Graphlets} in den Experimenten von Pruzlj et al und Shervashidze et a
 
 \subsubsection{Vergleich nach EC-Termen}
 
-EC-Terme beschreiben die enzymatische Aktivit\"at von Biomolek\"ulen. Analog zu GO-Termen erm\"oglichen sie eine Klassfizierung von Biomolek\"ulen entsprechend iherer biolgoischen Funktion, ohne jedoch den gesamten Prozess, oder das Zellorganell, in den das Molek\"ul involviert ist, zu beschreiben. Dem Dogma folgend, dass die Struktur eines Proteins seine Funktion bestimmt, liegt die Vermutung nahe, dass Proteine mit \"ahnlicher Funktion auch eine \"ahnliche Struktur besitzen m\"ussen. Der Vergleich anhand von EC-Termen ist interessant, weil strukturell \"ahnliche Dom\"anen unterschiedliche enzymatische Aktivit\"aten besitzen k\"onnen. Wenn Proteine mit gleicher Dom\"ane und unterschiedlichen enzymatischen Aktivit\"aten richtig eingeordnet werden, spricht das f\"ur die Genauigkeit des Algorithmus. Es bietet sich ein Vergleich von Mannose-6-phosphat Isomerasen und 5-dehydro-4-deoxy-D-glucuronat Isomerasen an. Es gibt Enzyme mit diesen Funktionen in diversen CATH-Superfamilien. Sie sind interessant f\"ur die Analyse, weil sich Vertreter beider Enzymklassen teilweise die selbe Superfamilie teilen, w\"ahrend es gleichzietig Superfamilien gibt, in denen nur eine der beiden enzymatischen Funktionen vorkommt.
+EC-Terme beschreiben die enzymatische Aktivit\"at von Biomolek\"ulen. Analog zu GO-Termen erm\"oglichen sie eine Klassfizierung von Biomolek\"ulen entsprechend iherer biolgoischen Funktion, ohne jedoch den gesamten Prozess, oder das Zellorganell, in den das Molek\"ul involviert ist, zu beschreiben. Dem Dogma folgend, dass die Struktur eines Proteins seine Funktion bestimmt, liegt die Vermutung nahe, dass Proteine mit \"ahnlicher Funktion auch eine \"ahnliche Struktur besitzen m\"ussen. Der Vergleich anhand von EC-Termen ist interessant, weil strukturell \"ahnliche Dom\"anen unterschiedliche enzymatische Aktivit\"aten besitzen k\"onnen. Wenn Proteine mit gleicher Dom\"ane und unterschiedlichen enzymatischen Aktivit\"aten richtig eingeordnet werden, spricht das f\"ur die Genauigkeit des Algorithmus. Es bietet sich ein Vergleich von Mannose-6-phosphat Isomerasen (MPhI) und 5-dehydro-4-deoxy-D-glucuronat Isomerasen (ddGI) an. Es gibt Enzyme mit diesen Funktionen in diversen CATH-Superfamilien. Sie sind interessant f\"ur die Analyse, weil sich Vertreter beider Enzymklassen teilweise die selbe Superfamilie teilen, w\"ahrend es gleichzeitig Superfamilien gibt, in denen nur eine der beiden enzymatischen Funktionen vorkommt.
+
+
+\begin{tabular}{l c c r}
+
+PDB-ID & Chain & CATH-Code   & EC-Code  \\
+1PMI   & A     & 2.60.120.10 & 5.3.1.8  \\
+1X8M   & A02   & 2.60.120.10 & 5.3.1.17 \\
+1YWK   & ????  & nicht da    & 5.3.1.17
+
+\end{tabular}
+
+
 
 \chapter{Ergebnisse}
 
