first small test successfull

--- a/arbeit.tex
+++ b/arbeit.tex
@@ -302,6 +302,9 @@ PDB-ID & Chain & CATH-Code   & EC-Code  \\
 
 \chapter{Ergebnisse}
 
+\section{Erster kleiner Test}
+
+Der erste kleine Test mit den Proteinen 1qf6, 1qf8 und 1qe0 war erfolgreich. Richtigerweise bewertet der Algorithmus mit der Relativen-\textit{Graphlet}-H\"aufigkeiten-Distanz die \"Ahnlichkeit von 1qf8 und 1qe0 h\"oher als die \"Ahnlichkeit zwischen den beiden und 1qf6. 1qf6 und 1qe0 sind beide Synthetasen, die Komplexe mit tRNA bilden, w\"ahrend 1qf8 eine Casein Kinase ist. 
 
 \section{Fallstudie - vergleich mit Dali}
 
