added some proteins to dataset

--- a/arbeit.tex
+++ b/arbeit.tex
@@ -258,25 +258,28 @@ Die Aldolasen 7TIM, 1NEY und 2V5L werden durch das gleich Gen in Hefe codiert. D
 \begin{tabular}{l r}
 
 PDB-ID & CATH-Code  \\
-2UTG & 1.10.210.10  \\
-1VIB & 1.10.287.120 \\
-1QPU & 1.20.120.10  \\
-1QQ3 & 1.20.120.10  \\
-2XL6 & 1.20.120.10  \\
-2YL1 & 1.20.120.10  \\
-1rxq & 1.20.120.450 \\
-2qe9 & 1.20.120.450 \\
-1M4R & 1.20.1250.10 \\
-1HGU & 1.20.1250.10 \\
-1D9C & 1.20.1250.10 \\
-1PV6 & 1.20.1250.20 \\
-1AWR & 2.40.100.10  \\
-1NGL & 2.40.128.20  \\
-1N7V & 2.105.10.10  \\ % riesiges Virusprotein
-7TIM & 3.20.20.70   \\
-1NEY & 3.20.20.70   \\
-2V5L & 3.20.20.70   \\
-1V3Z & 3.30.70.100  \\
+2UTG & 1.10.210.10  \\ % uteroglobin - pdb-klasse: steroid bindend
+1VIB & 1.10.287.120 \\ % neurotoxin - pdb-klasse: neurotoxin
+1QPU & 1.20.120.10  \\ % Cytochrom b
+1QQ3 & 1.20.120.10  \\ % cytochrom b oxidiert
+2XL6 & 1.20.120.10  \\ % cytochrom c mit NO
+2YL1 & 1.20.120.10  \\ % cytochrom c mit CO
+1rxq & 1.20.120.450 \\ % metall abhaengige hydrolase - pdb-head: metall abhaengiges protein
+2qe9 & 1.20.120.450 \\ % metall abhaengige hydrolase - pdb-head: hydrolase
+2RD9 & 1.20.120.450 \\ % metall abhaengige hydrolase - pdb-head: hydrolase
+1M4R & 1.20.1250.10 \\ % interleukin 22 - pdb-head: cytokin
+1HGU & 1.20.1250.10 \\ % wachstumshormon - pdb-head: hormon
+1PV6 & 1.20.1250.20 \\ % lactose permease - pdb-head: transportprotein
+1AWR & 2.40.100.10  \\ % enzymkomplex cypa und hagpia ?
+1D9C & 1.20.1250.10 \\ % BOVINE INTERFERON-GAMMA
+1NGL & 2.40.128.20  \\ % transportprotein
+1N7V & 2.105.10.10  \\ % riesiges Virusprotein - rezeptor bindendes protein
+7TIM & 3.20.20.70   \\ % triosephosphat isomerase phosphat-komplex
+1NEY & 3.20.20.70   \\ % triosephosphat isomerase DHAP-komplex
+2V5L & 3.20.20.70   \\ %  TRYPANOSOMAL TRIOSEPHOSPHATE ISOMERASE - neue kristallform
+1V3Z & 3.30.70.100  \\ % Acylphosphatase
+1A17 & 1.25.40.10   \\ % pdb-header sagt hydrolase - muesste anderen hydrolasen aehnlich sein
+1ar0 & 3.10.450.50  \\
 
 \end{tabular}
 
