--- a/arbeit.tex
+++ b/arbeit.tex
@@ -6,6 +6,8 @@
 \usepackage{ngerman}
 \usepackage{hyperref}
 \usepackage{natbib}
+\usepackage{rotating}
+\usepackage[table]{xcolor}
 %\usepackage{qtree}
 %\usepackage{cite}
 
@@ -363,33 +365,127 @@ Yang JA: Comprehensive description of protein structures using protein shape cod
 
 \chapter{Anhang}
 
-\section{Tabellenverzeichnis}
 
 \section{Bildverzeichnis}
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \includegraphics[width =\linewidth]{3graphlets.pdf}
 \caption{Graphlets der Gr\"o"se 3 (\textit{Shervashidze et al.})}
 \label{fig:3graphlets}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \includegraphics[width =\linewidth]{4graphlets.pdf}
 \caption{Graphlets der Gr\"o"se 4 (\textit{Shervashidze et al.})}
 \label{fig:4graphlets2}
 \end{figure}
 
-\begin{figure}[h]
+\newpage
+
+\begin{figure}[h!]
 \includegraphics[width =\linewidth]{5graphlets.pdf}
 \caption{Graphlets der Gr\"o"se 5 (\textit{Shervashidze et al.})}
 \label{fig:5graphlets}
 \end{figure}
 
+\newpage
 
 %TODO: UML Diagramm so, konvertieren, dass es eine Bounding Box hat und wieder einf\"ugen
 
+\section{Tabellenverzeichnis}
 
-\section{Literaturverzeichnis}
+\newpage
+
+
+\begin{sidewaystable}
+
+\scalebox{0.8}{
+\begin{tabular}[h!]{l l l l l l l l l l l l l l l l l l l l l l l l}
+
+PDB-ID & \cellcolor{blue!35}2utg & 1vib & 1qpu & 1qq3 & 2xl6 & 2yl1 & 1rxq & 2qe9 & 2rd9 & 1m4r & 1hgu & 1pv6 & 1awr & 1d9c & 1ngl & 1n7v & 7tim & 1ney & 1v3z & 1a17 & 1ar0 & 2v5l &  \\
+2utg &   X   & 8.915 & 8.626 & 8.150 & 9.759 & 13.62 & 6.408 & 8.128 & 7.384 & 5.158 & 4.944 & 3.570 & 11.67 & 4.392 & 7.387 & 13.02 & 9.171 & 8.737 & 8.025 & 2.490 & 9.329 & 6.253 &  \\
+1vib & 8.915 &   X   & 15.54 & 15.89 & 16.89 & 21.08 & 15.22 & 16.80 & 16.23 & 13.39 & 13.26 & 12.32 & 17.13 & 12.55 & 11.80 & 17.87 & 17.44 & 17.07 & 13.78 & 7.943 & 16.33 & 14.27 &  \\
+1qpu & 8.626 & 15.54 &   X   & 1.451 & 3.655 & 5.632 & 6.272 & 8.187 & 7.539 & 5.410 & 7.849 & 7.087 & 11.01 & 7.053 & 9.864 & 12.54 & 8.261 & 8.829 & 8.822 & 9.192 & 9.692 & 6.462 &  \\
+1qq3 & 8.150 & 15.89 & 1.451 &   X   & 3.614 & 5.651 & 6.064 & 7.554 & 7.252 & 5.087 & 7.413 & 6.776 & 11.02 & 6.721 & 9.918 & 12.56 & 7.787 & 8.354 & 8.892 & 9.531 & 9.216 & 6.019 &  \\
+2xl6 & 9.759 & 16.89 & 3.655 & 3.614 &   X   & 4.518 & 5.106 & 5.523 & 5.482 & 5.514 & 8.147 & 8.655 & 8.374 & 6.685 & 8.091 & 9.919 & 5.950 & 6.459 & 6.255 & 10.30 & 7.054 & 4.716 &  \\
+2yl1 & 13.62 & 21.08 & 5.632 & 5.651 & 4.518 &   X   & 7.737 & 7.197 & 7.589 & 8.855 & 11.36 & 11.82 & 11.53 & 10.34 & 12.29 & 12.94 & 8.343 & 8.923 & 10.59 & 14.75 & 10.14 & 8.137 &  \\
+1rxq & 6.408 & 15.22 & 6.272 & 6.064 & 5.106 & 7.737 &   X   & 2.271 & 1.563 & 1.846 & 4.457 & 4.428 & 8.105 & 2.685 & 6.737 & 10.11 & 4.059 & 4.769 & 5.299 & 8.066 & 5.910 & 3.043 &  \\
+2qe9 & 8.128 & 16.80 & 8.187 & 7.554 & 5.523 & 7.197 & 2.271 &   X   & 2.024 & 4.006 & 6.167 & 5.959 & 8.708 & 4.649 & 8.068 & 10.83 & 4.470 & 5.180 & 6.065 & 9.575 & 6.728 & 4.542 &  \\
+2rd9 & 7.384 & 16.23 & 7.539 & 7.252 & 5.482 & 7.589 & 1.563 & 2.024 &   X   & 3.205 & 5.325 & 5.829 & 7.137 & 3.853 & 6.677 & 9.126 & 3.049 & 3.785 & 4.747 & 9.046 & 5.086 & 3.123 &  \\
+1m4r & 5.158 & 13.39 & 5.410 & 5.087 & 5.514 & 8.855 & 1.846 & 4.006 & 3.205 &   X   & 3.657 & 3.784 & 8.468 & 1.837 & 6.243 & 10.41 & 5.063 & 5.650 & 5.068 & 6.336 & 5.972 & 2.922 &  \\
+1hgu & 4.944 & 13.26 & 7.849 & 7.413 & 8.147 & 11.36 & 4.457 & 6.167 & 5.325 & 3.657 &   X   & 4.692 & 9.337 & 3.187 & 5.776 & 10.59 & 6.059 & 5.603 & 6.003 & 7.045 & 6.636 & 3.742 &  \\
+1pv6 & 3.570 & 12.32 & 7.087 & 6.776 & 8.655 & 11.82 & 4.428 & 5.959 & 5.829 & 3.784 & 4.692 &   X   & 12.09 & 4.568 & 8.081 & 13.67 & 7.678 & 8.304 & 8.510 & 4.926 & 9.202 & 5.753 &  \\
+1awr & 11.67 & 17.13 & 11.01 & 11.02 & 8.374 & 11.53 & 8.105 & 8.708 & 7.137 & 8.468 & 9.337 & 12.09 &   X   & 7.762 & 7.577 & 2.196 & 4.751 & 4.070 & 3.972 & 11.87 & 3.395 & 6.506 &  \\
+1d9c & 4.392 & 12.55 & 7.053 & 6.721 & 6.685 & 10.34 & 2.685 & 4.649 & 3.853 & 1.837 & 3.187 & 4.568 & 7.762 &   X   & 6.366 & 9.743 & 5.605 & 5.246 & 4.468 & 5.626 & 6.116 & 3.637 &  \\
+1ngl & 7.387 & 11.80 & 9.864 & 9.918 & 8.091 & 12.29 & 6.737 & 8.068 & 6.677 & 6.243 & 5.776 & 8.081 & 7.577 & 6.366 &   X   & 8.064 & 6.805 & 6.711 & 4.658 & 8.473 & 5.325 & 4.582 &  \\
+1n7v & 13.02 & 17.87 & 12.54 & 12.56 & 9.919 & 12.94 & 10.11 & 10.83 & 9.126 & 10.41 & 10.59 & 13.67 & 2.196 & 9.743 & 8.064 &   X   & 6.405 & 5.675 & 5.484 & 13.53 & 4.509 & 7.987 &  \\
+7tim & 9.171 & 17.44 & 8.261 & 7.787 & 5.950 & 8.343 & 4.059 & 4.470 & 3.049 & 5.063 & 6.059 & 7.678 & 4.751 & 5.605 & 6.805 & 6.405 &   X   & 0.919 & 3.869 & 11.02 & 2.858 & 3.619 &  \\
+1ney & 8.737 & 17.07 & 8.829 & 8.354 & 6.459 & 8.923 & 4.769 & 5.180 & 3.785 & 5.650 & 5.603 & 8.304 & 4.070 & 5.246 & 6.711 & 5.675 & 0.919 &   X   & 3.500 & 10.59 & 2.683 & 3.646 &  \\
+1v3z & 8.025 & 13.78 & 8.822 & 8.892 & 6.255 & 10.59 & 5.299 & 6.065 & 4.747 & 5.068 & 6.003 & 8.510 & 3.972 & 4.468 & 4.658 & 5.484 & 3.869 & 3.500 &   X   & 8.286 & 2.693 & 3.435 &  \\
+1a17 & 2.490 & 7.943 & 9.192 & 9.531 & 10.30 & 14.75 & 8.066 & 9.575 & 9.046 & 6.336 & 7.045 & 4.926 & 11.87 & 5.626 & 8.473 & 13.53 & 11.02 & 10.59 & 8.286 &   X   & 10.56 & 7.612 &  \\
+1ar0 & 9.329 & 16.33 & 9.692 & 9.216 & 7.054 & 10.14 & 5.910 & 6.728 & 5.086 & 5.972 & 6.636 & 9.202 & 3.395 & 6.116 & 5.325 & 4.509 & 2.858 & 2.683 & 2.693 & 10.56 &   X   & 3.679 &  \\
+2v5l & 6.253 & 14.27 & 6.462 & 6.019 & 4.716 & 8.137 & 3.043 & 4.542 & 3.123 & 2.922 & 3.742 & 5.753 & 6.506 & 3.637 & 4.582 & 7.987 & 3.619 & 3.646 & 3.435 & 7.612 & 3.679 &   X   &  \\
+
+
+\end{tabular}}
+
+\end{sidewaystable}
+\newpage
+
+Proteine, die aus einer \textit{Chain} bestehen, die genau eine Dom\"ane enth\"alt
+
+In dieser Tabelle befinden sich die Graphen zu den Chains - Proteingraphen
+
+\scalebox{0.8}{
+\begin{tabular}{l l l l l l l l l l l l l l l l l}
+
+PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 &  \\
+1exs &   X   & 1.324 & 1.324 & 2.968 & 0.696 & 0.885 & 1.492 & 1.610 & 3.820 & 3.102 & 1.159 & 1.703 & 1.633 & 3.253 & 2.523 &  \\
+1ngl & 1.324 &   X   & 0.002 & 0.787 & 2.629 & 2.279 & 0.788 & 0.286 & 2.722 & 0.980 & 2.195 & 0.883 & 1.193 & 1.386 & 2.815 &  \\
+1qqs & 1.324 & 0.002 &   X   & 0.787 & 2.631 & 2.281 & 0.788 & 0.285 & 2.722 & 0.980 & 2.197 & 0.883 & 1.193 & 1.386 & 2.817 &  \\
+3slo & 2.968 & 0.787 & 0.787 &   X   & 0.257 & 0.705 & 1.024 & 1.073 & 6.154 & 3.137 & 1.226 & 1.396 & 1.513 & 4.357 & 1.596 &  \\
+1wjx & 0.696 & 2.629 & 2.631 & 0.257 &   X   & 1.043 & 0.933 & 0.914 & 2.093 & 0.644 & 1.049 & 1.270 & 1.339 & 1.291 & 2.056 &  \\
+5chy & 0.885 & 2.279 & 2.281 & 0.705 & 1.043 &   X   & 0.607 & 0.800 & 2.282 & 0.275 & 1.014 & 0.869 & 1.060 & 1.135 & 1.816 &  \\
+2id9 & 1.492 & 0.788 & 0.788 & 1.024 & 0.933 & 0.607 &   X   & 0.692 & 2.890 & 0.783 & 0.811 & 0.405 & 0.811 & 1.099 & 1.917 &  \\
+3i42 & 1.610 & 0.286 & 0.285 & 1.073 & 0.914 & 0.800 & 0.692 &   X   & 3.008 & 1.076 & 1.098 & 0.693 & 1.098 & 1.386 & 2.034 &  \\
+2w0i & 3.820 & 2.722 & 2.722 & 6.154 & 2.093 & 2.282 & 2.890 & 3.008 &   X   & 4.406 & 0.972 & 1.779 & 1.516 & 2.506 & 4.130 &  \\
+1d4o & 3.102 & 0.980 & 0.980 & 3.137 & 0.644 & 0.275 & 0.783 & 1.076 & 4.406 &   X   & 0.628 & 0.988 & 1.011 & 3.599 & 3.122 &  \\
+1qpu & 1.159 & 2.195 & 2.197 & 1.226 & 1.049 & 1.014 & 0.811 & 1.098 & 0.972 & 0.628 &   X   & 0.806 & 0.606 & 0.697 & 3.131 &  \\
+1qq3 & 1.703 & 0.883 & 0.883 & 1.396 & 1.270 & 0.869 & 0.405 & 0.693 & 1.779 & 0.988 & 0.806 &   X   & 0.405 & 1.504 & 1.567 &  \\
+1cgn & 1.633 & 1.193 & 1.193 & 1.513 & 1.339 & 1.060 & 0.811 & 1.098 & 1.516 & 1.011 & 0.606 & 0.405 &   X   & 0.810 & 1.432 &  \\
+1he9 & 3.253 & 1.386 & 1.386 & 4.357 & 1.291 & 1.135 & 1.099 & 1.386 & 2.506 & 3.599 & 0.697 & 1.504 & 0.810 &   X   & 4.492 &  \\
+3gf9 & 2.523 & 2.815 & 2.817 & 1.596 & 2.056 & 1.816 & 1.917 & 2.034 & 4.130 & 3.122 & 3.131 & 1.567 & 1.432 & 4.492 &   X   &  \\
+
+
+\end{tabular}}
+
+\newpage
+
+
+Hier sind die Komplexgraphen
+
+\scalebox{0.8}{
+\begin{tabular}{l l l l l l l l l l l l l l l l l}
+
+PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 &  \\
+1exs &   X   & 1.290 & 3.217 & 4.391 & 0.611 & 0.662 & 1.459 & 1.576 & 4.226 & 9.191 & 3.567 & 3.860 & 1.712 & 3.456 & 5.473 &  \\
+1ngl & 1.290 &   X   & 3.637 & 2.620 & 2.697 & 2.644 & 0.788 & 0.286 & 2.722 & 4.373 & 2.309 & 3.457 & 1.979 & 1.386 & 4.230 &  \\
+1qqs & 3.217 & 3.637 &   X   & 12.90 & 5.645 & 4.202 & 3.394 & 3.512 & 4.907 & 16.22 & 13.66 & 6.851 & 7.333 & 4.069 & 14.86 &  \\
+3slo & 4.391 & 2.620 & 12.90 &   X   & 4.974 & 3.863 & 2.351 & 2.412 & 7.116 & 14.09 & 14.10 & 12.70 & 12.20 & 5.432 & 15.99 &  \\
+1wjx & 0.611 & 2.697 & 5.645 & 4.974 &   X   & 0.360 & 0.961 & 0.965 & 2.042 & 2.225 & 2.128 & 2.587 & 1.954 & 1.466 & 2.516 &  \\
+5chy & 0.662 & 2.644 & 4.202 & 3.863 & 0.360 &   X   & 0.797 & 0.914 & 2.093 & 1.728 & 1.933 & 2.431 & 1.120 & 1.291 & 1.971 &  \\
+2id9 & 1.459 & 0.788 & 3.394 & 2.351 & 0.961 & 0.797 &   X   & 0.692 & 2.890 & 1.921 & 2.165 & 2.557 & 0.249 & 1.099 & 2.575 &  \\
+3i42 & 1.576 & 0.286 & 3.512 & 2.412 & 0.965 & 0.914 & 0.692 &   X   & 3.008 & 2.039 & 1.877 & 2.269 & 0.037 & 1.386 & 2.693 &  \\
+2w0i & 4.226 & 2.722 & 4.907 & 7.116 & 2.042 & 2.093 & 2.890 & 3.008 &   X   & 10.76 & 4.422 & 3.002 & 0.980 & 2.506 & 11.61 &  \\
+1d4o & 9.191 & 4.373 & 16.22 & 14.09 & 2.225 & 1.728 & 1.921 & 2.039 & 10.76 &   X   & 8.791 & 7.907 & 6.501 & 9.950 & 8.811 &  \\
+1qpu & 3.567 & 2.309 & 13.66 & 14.10 & 2.128 & 1.933 & 2.165 & 1.877 & 4.422 & 8.791 &   X   & 4.405 & 5.056 & 2.271 & 10.75 &  \\
+1qq3 & 3.860 & 3.457 & 6.851 & 12.70 & 2.587 & 2.431 & 2.557 & 2.269 & 3.002 & 7.907 & 4.405 &   X   & 1.906 & 1.714 & 10.03 &  \\
+1cgn & 1.712 & 1.979 & 7.333 & 12.20 & 1.954 & 1.120 & 0.249 & 0.037 & 0.980 & 6.501 & 5.056 & 1.906 &   X   & 0.985 & 9.469 &  \\
+1he9 & 3.456 & 1.386 & 4.069 & 5.432 & 1.466 & 1.291 & 1.099 & 1.386 & 2.506 & 9.950 & 2.271 & 1.714 & 0.985 &   X   & 5.881 &  \\
+3gf9 & 5.473 & 4.230 & 14.86 & 15.99 & 2.516 & 1.971 & 2.575 & 2.693 & 11.61 & 8.811 & 10.75 & 10.03 & 9.469 & 5.881 &   X   &  \\
+
+\end{tabular}}
+
 
 
 \bibliographystyle{plain}
