--- a/arbeit.tex
+++ b/arbeit.tex
@@ -470,7 +470,34 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 \newpage
 
 
-Hier sind die Komplexgraphen
+Hier sind die AA-Graphen mit RGF
+
+\scalebox{0.8}{
+\begin{tabular}{l l l l l l l l l l l l l l l l l}
+
+PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 &  \\
+1exs &   X   & \cellcolor{fGreen!25}4.463 & \cellcolor{fGreen!50}4.041 & \cellcolor{fGreen!75}3.138 & \cellcolor{fGreen!100}2.802 & 4.773 & 7.086 & 5.541 & 4.530 & 7.374 & 10.52 & 9.964 & 9.987 & 8.032 & 9.544 &  \\
+1ngl & \cellcolor{fGreen!50}4.463 &   X   & 7.716 & 6.865 & \cellcolor{fGreen!100}3.764 & \cellcolor{fGreen!25}4.718 & 6.054 & 5.065 & \cellcolor{fGreen!75}4.031 & 9.755 & 11.00 & 10.38 & 10.44 & 6.813 & 8.479 &  \\
+1qqs & \cellcolor{fGreen!75}4.041 & 7.716 &   X   & \cellcolor{fGreen!100}1.674 & \cellcolor{fGreen!50}5.340 & 8.148 & 10.20 & 8.612 & 7.404 & \cellcolor{fGreen!25}7.226 & 12.35 & 11.61 & 11.55 & 11.03 & 12.36 &  \\
+3slo & \cellcolor{fGreen!75}3.138 & \cellcolor{fGreen!25}6.865 & \cellcolor{fGreen!100}1.674 &   X   & \cellcolor{fGreen!50}4.750 & 7.488 & 9.994 & 8.600 & 6.997 & 7.680 & 12.45 & 11.84 & 11.81 & 10.87 & 12.19 &  \\
+1wjx & \cellcolor{fGreen!100}2.802 & \cellcolor{fGreen!75}3.764 & 5.340 & \cellcolor{fGreen!25}4.750 &   X   & 5.264 & 7.522 & 5.699 & \cellcolor{fGreen!50}4.384 & 8.450 & 11.66 & 11.10 & 11.16 & 8.405 & 10.03 &  \\
+5chy & 4.773 & 4.718 & 8.148 & 7.488 & 5.264 &   X   & \cellcolor{fGreen!75}2.600 & \cellcolor{fGreen!50}2.817 & \cellcolor{fGreen!100}1.497 & 8.667 & 7.517 & 6.967 & 6.801 & \cellcolor{fGreen!25}3.974 & 5.135 &  \\
+2id9 & 7.086 & 6.054 & 10.20 & 9.994 & 7.522 & \cellcolor{fGreen!50}2.600 &   X   & \cellcolor{fGreen!75}2.447 & 3.657 & 10.24 & 6.128 & 5.776 & 5.663 & \cellcolor{fGreen!100}2.445 & \cellcolor{fGreen!25}3.370 &  \\
+3i42 & 5.541 & 5.065 & 8.612 & 8.600 & 5.699 & \cellcolor{fGreen!75}2.817 & \cellcolor{fGreen!100}2.447 &   X   & \cellcolor{fGreen!50}2.817 & 9.544 & 6.625 & 6.039 & 5.929 & \cellcolor{fGreen!25}3.452 & 4.359 &  \\
+2w0i & 4.530 & \cellcolor{fGreen!25}4.031 & 7.404 & 6.997 & 4.384 & \cellcolor{fGreen!100}1.497 & \cellcolor{fGreen!50}3.657 & \cellcolor{fGreen!75}2.817 &   X   & 8.970 & 8.572 & 8.059 & 7.918 & 4.807 & 6.018 &  \\
+1d4o & \cellcolor{fGreen!25}7.374 & 9.755 & \cellcolor{fGreen!75}7.226 & 7.680 & 8.450 & 8.667 & 10.24 & 9.544 & 8.970 &   X   & \cellcolor{fGreen!50}7.326 & 7.491 & \cellcolor{fGreen!100}7.091 & 10.93 & 12.08 &  \\
+1qpu & 10.52 & 11.00 & 12.35 & 12.45 & 11.66 & 7.517 & \cellcolor{fGreen!25}6.128 & 6.625 & 8.572 & 7.326 &   X   & \cellcolor{fGreen!100}1.139 & \cellcolor{fGreen!75}1.296 & 6.159 & \cellcolor{fGreen!50}5.656 &  \\
+1qq3 & 9.964 & 10.38 & 11.61 & 11.84 & 11.10 & 6.967 & \cellcolor{fGreen!25}5.776 & 6.039 & 8.059 & 7.491 & \cellcolor{fGreen!100}1.139 &   X   & \cellcolor{fGreen!75}1.310 & 5.980 & \cellcolor{fGreen!50}5.645 &  \\
+1cgn & 9.987 & 10.44 & 11.55 & 11.81 & 11.16 & 6.801 & \cellcolor{fGreen!50}5.663 & 5.929 & 7.918 & 7.091 & \cellcolor{fGreen!100}1.296 & \cellcolor{fGreen!75}1.310 &   X   & 6.093 & \cellcolor{fGreen!25}5.737 &  \\
+1he9 & 8.032 & 6.813 & 11.03 & 10.87 & 8.405 & \cellcolor{fGreen!25}3.974 & \cellcolor{fGreen!75}2.445 & \cellcolor{fGreen!50}3.452 & 4.807 & 10.93 & 6.159 & 5.980 & 6.093 &   X   & \cellcolor{fGreen!100}2.289 &  \\
+3gf9 & 9.544 & 8.479 & 12.36 & 12.19 & 10.03 & \cellcolor{fGreen!25}5.135 & \cellcolor{fGreen!75}3.370 & \cellcolor{fGreen!50}4.359 & 6.018 & 12.08 & 5.656 & 5.645 & 5.737 & \cellcolor{fGreen!100}2.289 &   X   &  \\
+
+
+\end{tabular}}
+
+
+
+Hier sind die Komplexgraphen mit RGF
 
 \scalebox{0.8}{
 \begin{tabular}{l l l l l l l l l l l l l l l l l}
@@ -544,6 +571,33 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 
 
 \end{tabular}}
+
+
+Hier sind die AA-Graphen mit Tanimoto:
+
+\scalebox{0.8}{
+\begin{tabular}{l l l l l l l l l l l l l l l l l}
+
+PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 &  \\
+1exs &   X   & 0.621 & 0.621 & \cellcolor{fGreen!50}0.764 & \cellcolor{fGreen!100}0.875 & \cellcolor{fGreen!25}0.666 & 0.5 & 0.578 & \cellcolor{fGreen!75}0.818 & 0.463 & 0.276 & 0.304 & 0.333 & 0.463 & 0.276 &  \\
+1ngl & \cellcolor{fGreen!50}0.621 &   X   & 0.276 & 0.428 & \cellcolor{fGreen!75}0.666 & \cellcolor{fGreen!25}0.621 & 0.538 & 0.578 & \cellcolor{fGreen!100}0.666 & 0.463 & 0.25 & 0.276 & 0.224 & 0.428 & 0.333 &  \\
+1qqs & \cellcolor{fGreen!50}0.621 & 0.276 &   X   & \cellcolor{fGreen!100}1.0 & \cellcolor{fGreen!75}0.621 & \cellcolor{fGreen!25}0.5 & 0.276 & 0.395 & 0.463 & 0.463 & 0.25 & 0.304 & 0.224 & 0.176 & 0.2 &  \\
+3slo & \cellcolor{fGreen!75}0.764 & 0.428 & \cellcolor{fGreen!100}1.0 &   X   & \cellcolor{fGreen!50}0.538 & 0.463 & 0.333 & 0.395 & \cellcolor{fGreen!25}0.5 & 0.463 & 0.224 & 0.224 & 0.224 & 0.276 & 0.2 &  \\
+1wjx & \cellcolor{fGreen!100}0.875 & \cellcolor{fGreen!75}0.666 & \cellcolor{fGreen!50}0.621 & 0.538 &   X   & 0.538 & 0.363 & 0.5 & \cellcolor{fGreen!25}0.621 & 0.395 & 0.25 & 0.25 & 0.276 & 0.304 & 0.224 &  \\
+5chy & \cellcolor{fGreen!25}0.666 & 0.621 & 0.5 & 0.463 & 0.538 &   X   & \cellcolor{fGreen!75}0.818 & \cellcolor{fGreen!50}0.764 & \cellcolor{fGreen!100}1.0 & 0.428 & 0.538 & 0.578 & 0.5 & 0.621 & 0.621 &  \\
+2id9 & 0.5 & 0.538 & 0.276 & 0.333 & 0.363 & \cellcolor{fGreen!75}0.818 &   X   & \cellcolor{fGreen!50}0.818 & 0.621 & 0.304 & 0.714 & 0.666 & 0.666 & \cellcolor{fGreen!100}0.875 & \cellcolor{fGreen!25}0.764 &  \\
+3i42 & 0.578 & 0.578 & 0.395 & 0.395 & 0.5 & \cellcolor{fGreen!75}0.764 & \cellcolor{fGreen!100}0.818 &   X   & \cellcolor{fGreen!25}0.714 & 0.333 & 0.5 & 0.666 & 0.578 & \cellcolor{fGreen!50}0.764 & 0.621 &  \\
+2w0i & \cellcolor{fGreen!75}0.818 & \cellcolor{fGreen!25}0.666 & 0.463 & 0.5 & 0.621 & \cellcolor{fGreen!100}1.0 & 0.621 & \cellcolor{fGreen!50}0.714 &   X   & 0.333 & 0.333 & 0.463 & 0.428 & 0.463 & 0.463 &  \\
+1d4o & \cellcolor{fGreen!25}0.463 & \cellcolor{fGreen!50}0.463 & \cellcolor{fGreen!100}0.463 & \cellcolor{fGreen!75}0.463 & 0.395 & 0.428 & 0.304 & 0.333 & 0.333 &   X   & 0.363 & 0.428 & 0.333 & 0.333 & 0.25 &  \\
+1qpu & 0.276 & 0.25 & 0.25 & 0.224 & 0.25 & 0.538 & \cellcolor{fGreen!50}0.714 & 0.5 & 0.333 & 0.363 &   X   & \cellcolor{fGreen!75}1.0 & \cellcolor{fGreen!100}1.0 & 0.621 & \cellcolor{fGreen!25}0.666 &  \\
+1qq3 & 0.304 & 0.276 & 0.304 & 0.224 & 0.25 & 0.578 & \cellcolor{fGreen!50}0.666 & \cellcolor{fGreen!25}0.666 & 0.463 & 0.428 & \cellcolor{fGreen!75}1.0 &   X   & \cellcolor{fGreen!100}1.0 & 0.621 & 0.621 &  \\
+1cgn & 0.333 & 0.224 & 0.224 & 0.224 & 0.276 & 0.5 & \cellcolor{fGreen!25}0.666 & 0.578 & 0.428 & 0.333 & \cellcolor{fGreen!100}1.0 & \cellcolor{fGreen!75}1.0 &   X   & 0.621 & \cellcolor{fGreen!50}0.714 &  \\
+1he9 & 0.463 & 0.428 & 0.176 & 0.276 & 0.304 & \cellcolor{fGreen!25}0.621 & \cellcolor{fGreen!75}0.875 & \cellcolor{fGreen!50}0.764 & 0.463 & 0.333 & 0.621 & 0.621 & 0.621 &   X   & \cellcolor{fGreen!100}0.935 &  \\
+3gf9 & 0.276 & 0.333 & 0.2 & 0.2 & 0.224 & 0.621 & \cellcolor{fGreen!75}0.764 & 0.621 & 0.463 & 0.25 & \cellcolor{fGreen!25}0.666 & 0.621 & \cellcolor{fGreen!50}0.714 & \cellcolor{fGreen!100}0.935 &   X   &  \\
+
+
+\end{tabular}
+}
 
 
 \bibliographystyle{plain}
