--- a/arbeit.tex
+++ b/arbeit.tex
@@ -290,6 +290,44 @@ PDB-ID & CATH-Code  \\
 
 \end{tabular}
 
+
+\subsection{Datensatz 1} 
+
+F\"ur die ersten Tests wurden verschiedene Proteine entsprechend ihrer CATH-Klassifizeirugn zusammengestellt. Die Proteine wurden so gew\"ahlt, dass die 3 CATH-Klassen gleich stark vertreten sind, in denen sich viele Sekund\"arstrukturelemente befinden. Dementsprechend wurden Proteine aus der CATH-Klasse 4 ignoriert. Diese Klasse enth\"alt nur Proteine mit wenigen Sekund\"arstrukturelementen.
+
+Es befinden sich je 5 Vertreter der drei CATH-Klassen 1 (\textit{mainly-alpha}), 2 (\textit{mainly-beta}) und 3 (\textit{alpha-beta}) in diesem Datensatz. Diese wurden so gew\"ahlt, dass je ein Paar innerhalb der selben Klasse ein direkter struktureller Nachbar mit eine Sequenzidentit\"at von mehr als 95\%, sowie ein Nachbar mit einer Sequenzidentit\"at von meher als 35\% befindet, um zu \"uberpr\"ufen, ob die \textit{Graphlet}-Vektoren von Aminos\"auregraphen eine Korrelation mit der Sequenzidentit\"at aufweisen k\"onnen.
+Weiterhin wurde je ein Vertreter der selben Topologie aus einer anderen Superfamilie, sowie der selben Architektur mit anderer Topologie gew\"ahlt.
+ 
+Da die \textit{Graphlet}-Vektoren globale Eigenschaften eines Graphen beschreiben, wurde bei diesem Datensatz darauf geachtet, dass alle Strukturen aus genau einer Polypeptidkette bestehen.
+
+
+\begin{tabular}{c c c}
+
+PDB-ID & CATH        & Klassifizierung         \\
+1qpu   & 1.20.120.10 & Elektronentransport     \\
+1qq3   & 1.20.120.10 & Elektronentransport     \\
+1cgn   & 1.20.120.10 & Elektronentransport     \\
+1he9   & 1.20.120.260& Toxin (Exoenzym)        \\
+3gf9   & 1.20.900.10 & Endocytose              \\
+1exs   & 2.40.128.20 & Lipid bindendes Protein \\
+1ngl   & 2.40.128.20 & Transport Protein       \\
+1qqs   & 2.40.128.20 & Zucker bindendes Protein\\
+3slo   & 2.40.128.130& Protein Transport       \\
+1wjx   & 2.40.280.10 & RNA-bindendes Protein   \\
+5chy   & 3.40.50.2300& Signaltransduktion      \\
+2id9   & 3.40.50.2300& Signal Protein          \\
+3i42   & 3.40.50.2300& unbekannte Funktion     \\
+1d4o   & 3.40.50.1220& Oxidoreductase          \\
+2w0i   & 3.40.20.10  & Transferase             \\
+
+
+
+
+
+
+\end{tabular}
+
+
 \subsubsection{Vergleich von Proteinen \"ahnlicher Gr\"o"se}
 
 Da \textit{Graphlets} in den Experimenten von Pruzlj et al und Shervashidze et auf gro"se Graphen angewandt wurden, bietet es sich an, sie auch auf gro"se Proteinkomplexe anzuwenden und bei kleinen Proeinen den Aminsos\"auregraphen zu verwenden. So kann man (hoffentlich) das Problem der d\"unn besetzten Graphen umgehen und f\"ur verschiedene Gr\"o"sen von Graphen relevante Ergebnisse erzielen. Daf\"ur muss ein Datensatz aus gr\"o"sen Proteinkomplexen mit bekannter struktureller \"Ahnlichkeit zusammengestellt werden.
@@ -312,17 +350,9 @@ PDB-ID & Chain & CATH-Code   & EC-Code  \\
 
 \chapter{Ergebnisse}
 
-\section{Erster kleiner Test}
+\section{Fallstudien - Datensatz 1 -Messungen mit RGF}
 
-Der erste kleine Test mit den Proteinen 1qf6, 1qf8 und 1qe0 war erfolgreich. Richtigerweise bewertet der Algorithmus mit der Relativen-\textit{Graphlet}-H\"aufigkeiten-Distanz die \"Ahnlichkeit von 1qf8 und 1qe0 h\"oher als die \"Ahnlichkeit zwischen den beiden und 1qf6. 1qf6 und 1qe0 sind beide Synthetasen, die Komplexe mit tRNA bilden, w\"ahrend 1qf8 eine Casein Kinase ist. 
-
-\section{Fallstudie - Vergleich mit CATH-Einordnung}
-
-Die Ergebnisse sind f\"ur die KOmplexgraphen eher schlecht; bei Aminos\"auregraphen funktioniert der Vergleich ok, allerdings h\"angt das von der Klasse ab.
-Die beste aktuelle Idee zur Verbesserung ist eine st\"arkere Gewichtung der gelabelten \textit{Graphlets}. Diese k\"onnte f\"ur die AA-Graphen jedoch dazu f\"uhren, dass die Scores am st\"arksten mit der Sequenz\"ahnlichkeit korrelieren.
-Weiterhin k\"onnte es sinnvoll sein, die Homologie der Proteine im Datensatz zu pr\"ufen und zu schauen, ob sich Ideen f\"ur weitere Verbesserungen gewinnen lassen.
-
-
+Die paarweisen RGF-Distanzen der Proteine befindenn sich die in den Tabellen \ref{table:occ-pg-rgf} \ref{table:occ-aag-rgf} und \ref{table:occ-cg-tc}
 
 \subsection{AA-\textit{Graphlets}}
 
@@ -439,12 +469,16 @@ PDB-ID & \cellcolor{fGreen!100}2utg & 1vib & 1qpu & 1qq3 & 2xl6 & 2yl1 & 1rxq & 
 \end{sidewaystable}
 \newpage
 
-Proteine, die aus einer \textit{Chain} bestehen, die genau eine Dom\"ane enth\"alt
 
-In dieser Tabelle befinden sich die Graphen zu den Chains - Proteingraphen
 
+
+
+\begin{table}
+\label{table:occ-pg-rgf}
 \scalebox{0.8}{
 \begin{tabular}{l l l l l l l l l l l l l l l l l}
+
+
 
 PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1qpu & 1qq3 & 1cgn & 1he9 & 3gf9 &  \\
 1exs &   X   & \cellcolor{fGreen!25}1.324 & 1.324 & 2.968 & \cellcolor{fGreen!100}0.696 & \cellcolor{fGreen!75}0.885 & 1.492 & 1.610 & 3.820 & 3.102 & \cellcolor{fGreen!50}1.159 & 1.703 & 1.633 & 3.253 & 2.523 &  \\
@@ -463,15 +497,15 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 1he9 & 3.253 & 1.386 & 1.386 & 4.357 & 1.291 & \cellcolor{fGreen!25}1.135 & \cellcolor{fGreen!50}1.099 & 1.386 & 2.506 & 3.599 & \cellcolor{fGreen!100}0.697 & 1.504 & \cellcolor{fGreen!75}0.810 &   X   & 4.492 &  \\
 3gf9 & 2.523 & 2.815 & 2.817 & \cellcolor{fGreen!50}1.596 & 2.056 & \cellcolor{fGreen!25}1.816 & 1.917 & 2.034 & 4.130 & 3.122 & 3.131 & \cellcolor{fGreen!75}1.567 & \cellcolor{fGreen!100}1.432 & 4.492 &   X   &  \\
 
-
-
 \end{tabular}}
+\caption{Distanzen der Proteingraphen, gemessen mit RGF}
+\end{table}
 
 \newpage
 
 
-Hier sind die AA-Graphen mit RGF
-
+\begin{table}
+\label{table:occ-aag-rgf}
 \scalebox{0.8}{
 \begin{tabular}{l l l l l l l l l l l l l l l l l}
 
@@ -494,11 +528,13 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 
 
 \end{tabular}}
+\caption{Distanzen der Aminos\"auregraphen, gemessen mit RGF}
+\end{table}
 
 
 
-Hier sind die Komplexgraphen mit RGF
-
+\begin{table}
+\label{table:occ-cg-rgf}
 \scalebox{0.8}{
 \begin{tabular}{l l l l l l l l l l l l l l l l l}
 
@@ -520,10 +556,13 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 3gf9 & 5.473 & 4.230 & 14.86 & 15.99 & \cellcolor{fGreen!75}2.516 & \cellcolor{fGreen!100}1.971 & \cellcolor{fGreen!50}2.575 & \cellcolor{fGreen!25}2.693 & 11.61 & 8.811 & 10.75 & 10.03 & 9.469 & 5.881 &   X   &  \\
 
 
+
 \end{tabular}}
+\caption{Distanzen der Komplexgraphen, gemessen mit RGF}
+\end{table}
 
-Hier sind die Komplexgraphen mit Tanimoto
-
+\begin{table}
+\label{table:occ-cg-tc}
 \scalebox{0.8}{
 \begin{tabular}{l l l l l l l l l l l l l l l l l}
 
@@ -543,12 +582,14 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 1cgn & 0.428 & 0.5 & 0.224 & 0.111 & 0.463 & 0.5 & \cellcolor{fGreen!25}0.538 & \cellcolor{fGreen!50}0.538 & 0.363 & 0.363 & 0.395 & \cellcolor{fGreen!100}0.666 &   X   & \cellcolor{fGreen!75}0.621 & 0.224 &  \\
 1he9 & 0.578 & \cellcolor{fGreen!50}0.621 & 0.153 & 0.090 & 0.538 & \cellcolor{fGreen!25}0.621 & \cellcolor{fGreen!100}0.714 & \cellcolor{fGreen!75}0.714 & 0.538 & 0.428 & 0.428 & 0.621 & 0.621 &   X   & 0.25 &  \\
 3gf9 & \cellcolor{fGreen!75}0.276 & 0.224 & 0.153 & 0.153 & \cellcolor{fGreen!50}0.276 & \cellcolor{fGreen!100}0.304 & 0.25 & 0.224 & 0.224 & \cellcolor{fGreen!25}0.276 & 0.153 & 0.2 & 0.224 & 0.25 &   X   &  \\
-
-
 \end{tabular}}
+\caption{Tanimoto-Koeffizienten der Komplexgraphen}
+\end{table}
 
-Hier sind die Proteingraphen mit Tanimoto
 
+
+\begin{table}
+\label{table:occ-pg-tf}
 \scalebox{0.8}{
 \begin{tabular}{l l l l l l l l l l l l l l l l l}
 
@@ -568,13 +609,15 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 1cgn & 0.578 & 0.714 & 0.714 & 0.538 & 0.666 & 0.714 & \cellcolor{fGreen!75}0.875 & \cellcolor{fGreen!50}0.818 & 0.463 & 0.621 & \cellcolor{fGreen!25}0.764 & \cellcolor{fGreen!100}0.935 &   X   & 0.764 & 0.428 &  \\
 1he9 & 0.578 & 0.621 & 0.621 & 0.578 & 0.538 & 0.621 & \cellcolor{fGreen!25}0.714 & \cellcolor{fGreen!50}0.714 & 0.538 & 0.666 & 0.578 & \cellcolor{fGreen!75}0.764 & \cellcolor{fGreen!100}0.764 &   X   & 0.463 &  \\
 3gf9 & 0.428 & \cellcolor{fGreen!25}0.463 & 0.463 & 0.463 & \cellcolor{fGreen!50}0.463 & \cellcolor{fGreen!100}0.538 & 0.428 & 0.463 & 0.333 & \cellcolor{fGreen!75}0.5 & 0.463 & 0.463 & 0.428 & 0.463 &   X   &  \\
-
-
 \end{tabular}}
+\caption{Tanimoto-Koeffizienten der Proteingraphen}
+\end{table}
 
 
-Hier sind die AA-Graphen mit Tanimoto:
 
+
+\begin{table}
+\label{table:occ-aa-tc}
 \scalebox{0.8}{
 \begin{tabular}{l l l l l l l l l l l l l l l l l}
 
@@ -595,9 +638,9 @@ PDB-ID & 1exs & 1ngl & 1qqs & 3slo & 1wjx & 5chy & 2id9 & 3i42 & 2w0i & 1d4o & 1
 1he9 & 0.463 & 0.428 & 0.176 & 0.276 & 0.304 & \cellcolor{fGreen!25}0.621 & \cellcolor{fGreen!75}0.875 & \cellcolor{fGreen!50}0.764 & 0.463 & 0.333 & 0.621 & 0.621 & 0.621 &   X   & \cellcolor{fGreen!100}0.935 &  \\
 3gf9 & 0.276 & 0.333 & 0.2 & 0.2 & 0.224 & 0.621 & \cellcolor{fGreen!75}0.764 & 0.621 & 0.463 & 0.25 & \cellcolor{fGreen!25}0.666 & 0.621 & \cellcolor{fGreen!50}0.714 & \cellcolor{fGreen!100}0.935 &   X   &  \\
 
-
-\end{tabular}
-}
+\end{tabular}}
+\caption{Tanimoto-Koeffizienten der Aminos\"auregraphen}
+\end{table}
 
 
 \bibliographystyle{plain}
