--- a/arbeit.tex
+++ b/arbeit.tex
@@ -372,8 +372,9 @@ Es f\"allt jedoch auf, dass besonders h\"aufig die Proteine der \textit{alpha-be
 \paragraph{Der Vergleich der Tanimoto-Koeffizienten}
 zeigt ein \"ahnliches Bild, wie der Vergleich der RGF-Distanzen. Bei den Aminos\"auregraphen zeigt sich, dass innerhalb der \textit{mainly-alpha}-Klasse wieder die paarweisen \"Ahnlichkeiten der \textit{mainly-alpha}-Proteine am gr\"o"sten sind. Dies gilt bis auf eine Ausnahme auch f\"ur die \textit{mainly-beta}-Proteine. Das Protein mit der PDB-ID 1NGL wird als strukturell \"ahnlichstes Protein zu 2W0I bewertet. In der Klasse der \textit{alpha-beta}-Proteine gibt es mit 2ID9 und 1D4O wieder zwei Ausrei"ser, die die gr\"o"sten paarweisen \"Ahnlichkeiten nicht zu Vertretern der eigenen Klasse haben. F\"ur 2ID9 wird 1HE9 als \"ahnlichstes Protein angegeben und 1D4O wird 1QQS zugeordnet.
 
-Die paarweisen tanimot-Koeffizienten der Proteingraphen
- 
+Die paarweisen Tanimoto-Koeffizienten der Proteingraphen zeigen - wie schon bei den RGF-Distanzen - eine geringere Korrelation mit der Zugeh\"origkeit zu den CATH-Klassen, als die Koeffizienten der Aminos\"auregraphen. Es haben zwar wieder mindestens 3 Vertreter jeder Klasse ihren n\"achsten Nachbarn in der gleichen Klasse, aber es gibt auch einige Proteine, die ihren n\"achsten Nachbarn au"serhalb der eigenen Klasse haben. Hierzu geh\"oren 1D4O, 2W0I (beide \textit{alpha-beta}) und 3GF9 (\textit{mainly-alpha}). Es f\"allt auf, dass wieder die Proteine mit den PDB-DIs 2ID9 und 3I42 besonders h\"aufig als strukturell \"ahnlich zu vielen anderen Proteinen bewertet werden.
+
+F\"ur die KOmplexgraphen zeigt die Tabelle wieder eine hohe \"Ahnlichkeite unter den ersten 3 Proteinen 1QPU, 1QQ3 und 1CGN. Auch innerhalb der Klasse \textit{alpha-beta} sind 3 Proteine mit der h\"ochsten paarweisen \"Ahnlichkeit bewertet worden. Die geringe Anzahl von stark bewerteten \"Ahnlichkeiten innerhalb der \textit{mainly-beta}-Klasse ist sehr auff\"allig. 1QQS und 3SLO sind das einzige Paar mit \textit{beta}-Topologie, dessen \"Ahnlichkeit als gro"s bewertet wurde.
 
 
 
